# recto

./: .gitattributes  .gitignore  LICENSE  PRIVACY.md  README.md  package.json  pnpm-lock.yaml
docs/: AI-FEATURES-PLAN.md  MONETIZATION-PLAN.md  PHASE-10-WIN11-CONTEXT-MENU.md  PHASE-27-LIVE-RELOAD-PLAN.md  PHASE-89-FORMATS-PLAN.md  PLANNING.md
docs/design/: DESIGN.md  installer-brief.md  preview.html
docs/design/source/: README.md  marks.jsx  recto-app.css  recto-app.html  recto-content.js  recto-logos.html  recto-review.html  recto-status.html  recto-viewer.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: recto-hooks.nsh
src-tauri/src/: lib.rs  main.rs
src/styles/: app.css  memo.css  raw.css
