[package]
name = "recto"
version = "0.1.0"
description = "Fast, viewer-first Markdown reader for Windows. Three rendering modes, clean PDF/HTML export."
authors = ["Michael O'Hara <31449199+michaeldohara@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/michaeldohara/recto"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "recto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-decorum = "1.1.1"
base64 = "0.22.1"
winreg = "0.56.0"
open = "5.3.5"

